Added update functionality
